--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_home">მთავარი</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">კალათა</string>
+
+    <string name="Ok">დასტური</string>
+    <string name="Cancel">გაუქმება</string>
+    <string name="dialog_title">ინფორმაცია</string>
+    <string name="dialog_message">შეიყვანეთ პროდუქტის წინა გრამებში</string>
 </resources>
